--- a/package.xml
+++ b/package.xml
@@ -29,18 +29,18 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <email>wez@php.net</email>
   <active>yes</active>
  </lead>
- <date>2009-10-05</date>
- <time>12:00:00</time>
+ <date>2012-05-06</date>
+ <time>23:00:00</time>
  <version>
-  <release>0.4.0</release>
-  <api>0.4.0</api>
+  <release>0.5.0</release>
+  <api>0.5.0</api>
  </version>
  <stability>
   <release>beta</release>
   <api>beta</api>
  </stability>
  <license uri="http://www.php.net/license">PHP</license>
- <notes>- Added PHP 5.3.x support.
+ <notes>- Fixed 5.4.x build. (patch by oeriksson at mandriva dot com)
  </notes>
  <contents>
   <dir name="/">
@@ -95,6 +95,21 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <configureoption default="autodetect" name="with-swish" prompt="Please provide the path to swish-config" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2009-10-05</date>
+   <time>12:00:00</time>
+   <version>
+    <release>0.4.0</release>
+    <api>0.4.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP</license>
+   <notes>- Added PHP 5.3.x support.
+   </notes>
+  </release>
   <release>
    <date>2007-05-17</date>
    <time>19:00:00</time>
